--- a/example/templates/icons.css.hbs
+++ b/example/templates/icons.css.hbs
@@ -3,16 +3,19 @@
  FOR GENERATE IT RUN: npm run generate-icon-font
 */
 
-$baseUrl: '{ externalBaseUrl }';
 @font-face {
   font-family: "iconfont";
-  src: url($baseUrl + "fonts/icon/iconfont.eot") format("embedded-opentype"),
-  url($baseUrl + "fonts/icon/iconfont.woff2") format("woff2"),
-  url($baseUrl + "fonts/icon/iconfont.woff") format("woff");
+  src: url('fonts/iconfont.eot'); /* IE9 Compat Modes */
+  src: url('fonts/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/iconfont.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/iconfont.woff') format('woff'), /* Pretty Modern Browsers */
+       url('fonts/iconfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('fonts/iconfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 
-@mixin make-icon-font() {
-  font-family: {{fontName}} !important;
+
+.custom-icons {
+  font-family: iconfont !important;
   font-weight: normal;
   font-style: normal;
   font-size: 20px;  /* Preferred icon size */
